--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,33 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--    <groupId>org.springframework</groupId>-->
-        <!--    <artifactId>spring-test</artifactId>-->
-        <!--    <version>5.0.2.RELEASE</version>-->
-        <!--</dependency>-->
+
+        <!--plumelog-->
+
+        <dependency>
+            <groupId>com.plumelog</groupId>
+            <artifactId>plumelog-logback</artifactId>
+            <version>3.4.1.2-SNAPSHOT</version>
+        </dependency>
+        <!--logback-->
+        <dependency>
+            <groupId>com.plumelog</groupId>
+            <artifactId>plumelog-logback</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <!--在引用时请在maven中央仓库搜索2.X最新版本号-->
+            <version>2.0.9</version>
+        </dependency>
 
     </dependencies>
 
